name:                linode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Helkafen/linode#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian de Bellefon
maintainer:          arnaudpourseb@gmail.com
copyright:           BSD3
category:            Network, Cloud, Distributed Computing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Linode
  build-depends:       base >= 4.7 && < 5
                      ,wreq >= 0.3
                      ,aeson
                      ,text
                      ,bytestring
                      ,containers
                      ,safe
  default-language:    Haskell2010

executable linode-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linode
  default-language:    Haskell2010

test-suite linode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linode
                     , aeson
                     , containers
                     , tasty >= 0.10.1
                     , tasty-hunit >= 0.8
                     , tasty-quickcheck >= 0.8.2

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Helkafen/linode
